Project setup for 1.20.1, compiles but won't work yet